# F1_strategy_analyser

./: .gitignore  AGENTS.md  PLANS.md  README.md  REQUIREMENTS.md  pyproject.toml
cache/: laps-2021-1-race-NOR-VER.parquet
src/f1analyser/: app.py  comparison.py  laps.py  metrics.py  pits_stints.py  session_loader.py
src/f1analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_comparison.py  test_imports.py  test_laps.py  test_metrics.py  test_pits_stints.py  test_session_loader.py
tests/fixtures/: pit_stint_counts.json
