[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1analyser"
version = "0.1.0"
description = "F1 post-race strategy analyzer (Streamlit MVP)"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.36",
  "pandas>=2.2",
  "numpy>=1.26",
  "plotly>=5.22",
  "fastf1>=3.4",
  "pyarrow>=16.1",
  "reportlab>=4.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "types-requests",
  "ruff>=0.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["f1analyser"]
disable_error_code = ["import-untyped"]
